# dn42-autopeer-daemon

./: .gitignore  Cargo.toml  README.md  config.toml  dn42-autopeer-daemon.service
src/: db.rs  gen_config.rs  handler.rs  main.rs  model.rs  system.rs
templates/: peer_mpbgp.conf  wireguard.conf
